--- a/index_RO_table.html
+++ b/index_RO_table.html
@@ -4038,7 +4038,7 @@
       <td>China</td>
     </tr>
     <tr>
-      <td>USA China Entrepreneurs Association</td>
+      <td>USA China Entrepreneurs Association (Beijing)</td>
       <td>美国中国企业家协会</td>
       <td>Beijing Commission of Commerce</td>
       <td>北京市商务委员会</td>
@@ -4047,6 +4047,17 @@
       <td>Beijing</td>
       <td>2018-02-05</td>
       <td>Beijing, Hebei, Liaoning, Shanxi, Tianjin</td>
+    </tr>
+    <tr>
+      <td>USA China Entrepreneurs Association (Inner Mongolia)</td>
+      <td>美国中国企业家协会</td>
+      <td>Inner Mongolia Department of Commerce</td>
+      <td>内蒙古商务厅</td>
+      <td>United States</td>
+      <td>Trade</td>
+      <td>Inner Mongolia</td>
+      <td>2018-07-11</td>
+      <td>Inner Mongolia</td>
     </tr>
     <tr>
       <td>USA Poultry and Egg Export Council</td>
