--- a/index_TA_table.html
+++ b/index_TA_table.html
@@ -858,7 +858,7 @@
     </tr>
     <tr>
       <td>Barry &amp; Martin’s Trust</td>
-      <td>英国贝利—马丁基金会</td>
+      <td>贝利•马丁基金会</td>
       <td>United Kingdom</td>
       <td>Medical Treatment Assistance Activity with Dali No. 2 People’s Hospital</td>
       <td>英国贝利马丁基金会与大理市第二人民医院医疗救助活动</td>
@@ -874,7 +874,7 @@
     </tr>
     <tr>
       <td>Barry &amp; Martin’s Trust</td>
-      <td>英国贝利马丁基金会</td>
+      <td>贝利•马丁基金会</td>
       <td>United Kingdom</td>
       <td>Jiangxi Province AIDS Care Assistance</td>
       <td>江西省艾滋病关怀救助</td>
@@ -890,7 +890,7 @@
     </tr>
     <tr>
       <td>Barry &amp; Martin’s Trust</td>
-      <td>英国贝利马丁基金会</td>
+      <td>贝利•马丁基金会</td>
       <td>United Kingdom</td>
       <td>Pu’er City Intervention Program to Care for Populations with HIV/AIDS and Men Who Have Sex with Men</td>
       <td>普洱市HIV/AIDS关怀和男男人群干预项目</td>
@@ -906,7 +906,7 @@
     </tr>
     <tr>
       <td>Barry &amp; Martin’s Trust</td>
-      <td>贝利·马丁基金会</td>
+      <td>贝利•马丁基金会</td>
       <td>United Kingdom</td>
       <td>Provision of Funding to Qaramay Area Charitable Social Work Service Society</td>
       <td>英国贝利马丁基金会对克拉玛依尚善社会工作服务社资助</td>
@@ -922,7 +922,7 @@
     </tr>
     <tr>
       <td>Barry &amp; Martin’s Trust</td>
-      <td>贝利马丁基金会</td>
+      <td>贝利•马丁基金会</td>
       <td>United Kingdom</td>
       <td>Care and Training for Persons Infected with or Sick from the AIDS Virus in Guiyang City</td>
       <td>贵阳市艾滋病病毒感染者/病人关怀及培训活动</td>
@@ -938,7 +938,7 @@
     </tr>
     <tr>
       <td>Barry &amp; Martin’s Trust</td>
-      <td>贝利马丁基金会</td>
+      <td>贝利•马丁基金会</td>
       <td>United Kingdom</td>
       <td>Beijing Home of the Red Ribbon AIDS Patient Care and Concern Program</td>
       <td>北京红丝带之家艾滋病患者关怀支持项目</td>
@@ -954,7 +954,7 @@
     </tr>
     <tr>
       <td>Barry &amp; Martin’s Trust</td>
-      <td>贝利马丁基金会</td>
+      <td>贝利•马丁基金会</td>
       <td>United Kingdom</td>
       <td>Donations to Zunyi Yuan’ai Famous City Public Welfare Association</td>
       <td>英国贝利.马丁基金会向遵义缘爱名城公益协会捐款</td>
@@ -4524,6 +4524,22 @@
       <td>Grace Charity Foundation Limited</td>
       <td>慈恩基金会有限公司</td>
       <td>Hong Kong</td>
+      <td>Selection of the Best Impoverished Junior College Students/Interviews/Home Visits</td>
+      <td>选拔优秀贫困大专生/面谈/家访</td>
+      <td>Guizhou Province</td>
+      <td>贵州省</td>
+      <td>2018-07-01</td>
+      <td>2018-09-30</td>
+      <td>Qianxinan Buyi and Miao Autonomous Prefecture Small Group Office for Helping Develop Border Areas</td>
+      <td>黔西南州智力支边联系小组办公室</td>
+      <td>Party or Government Entity</td>
+      <td>Not Applicable</td>
+      <td>Not Applicable</td>
+    </tr>
+    <tr>
+      <td>Grace Charity Foundation Limited</td>
+      <td>慈恩基金会有限公司</td>
+      <td>Hong Kong</td>
       <td>Financial Aid Students Heading to Tianshui Normal University</td>
       <td>慈恩基金会前往甘肃天水师范学院开展助学活动</td>
       <td>Gansu Province (Tianshui City)</td>
@@ -4969,22 +4985,6 @@
       <td>Not Applicable</td>
     </tr>
     <tr>
-      <td>Grace Charity Foundation Limited</td>
-      <td>慈恩基金会有限公司</td>
-      <td>Hong Kong</td>
-      <td>Selection of the Best Impoverished Junior College Students/Interviews/Home Visits</td>
-      <td>选拔优秀贫困大专生/面谈/家访</td>
-      <td>Guizhou Province</td>
-      <td>贵州省</td>
-      <td>2018-07-01</td>
-      <td>2018-09-30</td>
-      <td>Qianxinan Buyi and Miao Autonomous Prefecture Small Group Office for Helping Develop Border Areas</td>
-      <td>黔西南州智力支边联系小组办公室</td>
-      <td>Party or Government Entity</td>
-      <td>Not Applicable</td>
-      <td>Not Applicable</td>
-    </tr>
-    <tr>
       <td>Gratia Foundation</td>
       <td>华恩基金会</td>
       <td>Hong Kong</td>
@@ -5132,6 +5132,22 @@
       <td>Greenpeace</td>
       <td>绿色和平</td>
       <td>The Netherlands</td>
+      <td>Promoting the Construction of a Recycling Economy for the Electronics and Information Industries</td>
+      <td>关于促进电子信息产业循环经济建设</td>
+      <td>Beijing City / Shanghai City / Hebei Province / Anhui Province / Jiangsu Province / Jiangxi Province / Hubei Province / Chongqing City / Guangdong Province / Zhejiang Province</td>
+      <td>北京市,上海市,河北省,河南省,安徽省,江苏省,江西省,湖北省,重庆市,广东省,浙江省</td>
+      <td>2018-07-09</td>
+      <td>2019-06-19</td>
+      <td>China Association of Electronics Equipments for Technology Development</td>
+      <td>中国电子装备技术开发协会</td>
+      <td>Non-profit or Foundation</td>
+      <td>Unknown</td>
+      <td>（已脱钩）</td>
+    </tr>
+    <tr>
+      <td>Greenpeace</td>
+      <td>绿色和平</td>
+      <td>The Netherlands</td>
       <td>Green Finance Development Experimental Zone Green Finance Development Investigation</td>
       <td>绿色金融发展试验区绿色金融发展调研</td>
       <td>Beijing City / Jiangxi Province / Zhejiang Province / Guizhou Province / Xinjiang Uighur Autonomous Region</td>
@@ -5207,22 +5223,6 @@
       <td>School, College, University, or Training Institution</td>
       <td>Not Applicable</td>
       <td>Not Applicable</td>
-    </tr>
-    <tr>
-      <td>Greenpeace</td>
-      <td>绿色和平</td>
-      <td>The Netherlands</td>
-      <td>Promoting the Construction of a Recycling Economy for the Electronics and Information Industries</td>
-      <td>关于促进电子信息产业循环经济建设</td>
-      <td>Beijing City / Shanghai City / Hebei Province / Anhui Province / Jiangsu Province / Jiangxi Province / Hubei Province / Chongqing City / Guangdong Province / Zhejiang Province</td>
-      <td>北京市,上海市,河北省,河南省,安徽省,江苏省,江西省,湖北省,重庆市,广东省,浙江省</td>
-      <td>2018-07-09</td>
-      <td>2019-06-19</td>
-      <td>China Association of Electronics Equipments for Technology Development</td>
-      <td>中国电子装备技术开发协会</td>
-      <td>Non-profit or Foundation</td>
-      <td>Unknown</td>
-      <td>（已脱钩）</td>
     </tr>
     <tr>
       <td>GS Charity Foundation Limited</td>
@@ -6682,6 +6682,22 @@
     </tr>
     <tr>
       <td>International Union Against Tuberculosis and Lung Disease (Operational Name: Vital Strategies)</td>
+      <td>国际防痨和肺部疾病联合会（经营名称：卫健策略）</td>
+      <td>Unknown</td>
+      <td>Promoting Revisions to Hangzhou’s Regulations to Control Smoking and Establishing 100% Smoke-Free Indoor Environments</td>
+      <td>促进杭州市控烟条例修订及创建100%室内无烟环境</td>
+      <td>Zhejiang Province</td>
+      <td>浙江省</td>
+      <td>2018-06-01</td>
+      <td>2018-08-31</td>
+      <td>Hangzhou Normal University</td>
+      <td>杭州师范大学</td>
+      <td>School, College, University, or Training Institution</td>
+      <td>Not Applicable</td>
+      <td>Not Applicable</td>
+    </tr>
+    <tr>
+      <td>International Union Against Tuberculosis and Lung Disease (Operational Name: Vital Strategies)</td>
       <td>国际防痨和肺部疾病联合会(经营名称：卫健策略）</td>
       <td>Unknown</td>
       <td>Promoting 100% Smoke-Free Legislation and 100% Smoke-Free Indoor Environments in Lanzhou</td>
@@ -6689,6 +6705,22 @@
       <td>Gansu Province (Lanzhou City)</td>
       <td>甘肃省兰州市</td>
       <td>2018-01-09</td>
+      <td>2018-12-31</td>
+      <td>Lanzhou Disease Prevention and Control Center</td>
+      <td>兰州市疾病预防控制中心</td>
+      <td>Party or Government Entity</td>
+      <td>Not Applicable</td>
+      <td>Not Applicable</td>
+    </tr>
+    <tr>
+      <td>International Union Against Tuberculosis and Lung Disease (Operational Name: Vital Strategies)</td>
+      <td>国际防痨和肺部疾病联合会（经营名称：卫健策略）</td>
+      <td>Unknown</td>
+      <td>Lanzhou Controlling Smoking Media Publicity Campaign</td>
+      <td>兰州控烟媒体传播项目</td>
+      <td>Gansu Province</td>
+      <td>甘肃省</td>
+      <td>2018-06-11</td>
       <td>2018-12-31</td>
       <td>Lanzhou Disease Prevention and Control Center</td>
       <td>兰州市疾病预防控制中心</td>
@@ -6741,38 +6773,6 @@
       <td>Shanghai City Center Disease Prevention and Control</td>
       <td>上海市疾病预防控制中心</td>
       <td>Party or Government Entity</td>
-      <td>Not Applicable</td>
-      <td>Not Applicable</td>
-    </tr>
-    <tr>
-      <td>International Union Against Tuberculosis and Lung Disease (Operational Name: Vital Strategies)</td>
-      <td>国际防痨和肺部疾病联合会（经营名称：卫健策略）</td>
-      <td>Unknown</td>
-      <td>Lanzhou Controlling Smoking Media Publicity Campaign</td>
-      <td>兰州控烟媒体传播项目</td>
-      <td>Gansu Province</td>
-      <td>甘肃省</td>
-      <td>2018-06-11</td>
-      <td>2018-12-31</td>
-      <td>Lanzhou Disease Prevention and Control Center</td>
-      <td>兰州市疾病预防控制中心</td>
-      <td>Party or Government Entity</td>
-      <td>Not Applicable</td>
-      <td>Not Applicable</td>
-    </tr>
-    <tr>
-      <td>International Union Against Tuberculosis and Lung Disease (Operational Name: Vital Strategies)</td>
-      <td>国际防痨和肺部疾病联合会（经营名称：卫健策略）</td>
-      <td>Unknown</td>
-      <td>Promoting Revisions to Hangzhou’s Regulations to Control Smoking and Establishing 100% Smoke-Free Indoor Environments</td>
-      <td>促进杭州市控烟条例修订及创建100%室内无烟环境</td>
-      <td>Zhejiang Province</td>
-      <td>浙江省</td>
-      <td>2018-06-01</td>
-      <td>2018-08-31</td>
-      <td>Hangzhou Normal University</td>
-      <td>杭州师范大学</td>
-      <td>School, College, University, or Training Institution</td>
       <td>Not Applicable</td>
       <td>Not Applicable</td>
     </tr>
@@ -11568,8 +11568,8 @@
       <td>内地农村服务体验计划</td>
       <td>Guangdong Province</td>
       <td>广东省</td>
-      <td>2018-08-03</td>
-      <td>2018-08-04</td>
+      <td>2018-07-28</td>
+      <td>2018-07-28</td>
       <td>Liannan County, Daping Town Daping Central School and Junliao Village Education Center</td>
       <td>连南县大坪镇大坪中心学校、军寮教学点</td>
       <td>School, College, University, or Training Institution</td>
@@ -11584,8 +11584,8 @@
       <td>内地农村服务体验计划</td>
       <td>Guangdong Province</td>
       <td>广东省</td>
-      <td>2018-07-28</td>
-      <td>2018-07-28</td>
+      <td>2018-08-03</td>
+      <td>2018-08-04</td>
       <td>Liannan County, Daping Town Daping Central School and Junliao Village Education Center</td>
       <td>连南县大坪镇大坪中心学校、军寮教学点</td>
       <td>School, College, University, or Training Institution</td>
@@ -13552,10 +13552,10 @@
       <td>仁枫洞佛道社有限公司助学活动</td>
       <td>Guangdong Province</td>
       <td>广东省</td>
-      <td>2018-06-23</td>
+      <td>2018-06-22</td>
       <td>2018-06-24</td>
-      <td>Sanpai Elementary School</td>
-      <td>三排小学</td>
+      <td>Liannan Yao Autonomous County, Sanpai Town Nangang Central School</td>
+      <td>连南瑶族自治县三排镇南岗中心学校</td>
       <td>School, College, University, or Training Institution</td>
       <td>Not Applicable</td>
       <td>Not Applicable</td>
@@ -13568,10 +13568,10 @@
       <td>仁枫洞佛道社有限公司助学活动</td>
       <td>Guangdong Province</td>
       <td>广东省</td>
-      <td>2018-06-22</td>
+      <td>2018-06-23</td>
       <td>2018-06-24</td>
-      <td>Liannan Yao Autonomous County, Sanpai Town Nangang Central School</td>
-      <td>连南瑶族自治县三排镇南岗中心学校</td>
+      <td>Sanpai Elementary School</td>
+      <td>三排小学</td>
       <td>School, College, University, or Training Institution</td>
       <td>Not Applicable</td>
       <td>Not Applicable</td>
@@ -13799,6 +13799,102 @@
       <td>Other</td>
       <td>Not Applicable</td>
       <td>Not Applicable</td>
+    </tr>
+    <tr>
+      <td>Barry &amp; Martin’s Trust</td>
+      <td>贝利•马丁基金会</td>
+      <td>United Kingdom</td>
+      <td>Visit to Xinjiang</td>
+      <td>英国贝利马丁基金会来疆访问</td>
+      <td>Xinjiang Uyghur Autonomous Region (Urumqi City, Xinshi District)</td>
+      <td>新疆乌鲁木齐市新市区</td>
+      <td>2017-09-01</td>
+      <td>2017-11-29</td>
+      <td>Xinjiang No.6 People's Hospital</td>
+      <td>新疆维吾尔自治区第六人民医院</td>
+      <td>Hospital or Medical Center</td>
+      <td>Not Applicable</td>
+      <td>Not Applicable</td>
+    </tr>
+    <tr>
+      <td>Barry &amp; Martin’s Trust</td>
+      <td>贝利•马丁基金会</td>
+      <td>United Kingdom</td>
+      <td>Provision of Funding to Qaramay Area Charitable Social Work Service Society</td>
+      <td>英国贝利马丁基金会对克拉玛依尚善社会工作服务社资助</td>
+      <td>Xinjiang Uyghur Autonomous Region</td>
+      <td>新疆维吾尔自治区</td>
+      <td>2018-02-24</td>
+      <td>2019-02-24</td>
+      <td>Qaramay Area Charitable Social Work Service Socity</td>
+      <td>克拉玛依区尚善社会工作服务社</td>
+      <td>Non-profit or Foundation</td>
+      <td>Qaramay Civil Affairs Bureau</td>
+      <td>克拉玛依区民政局</td>
+    </tr>
+    <tr>
+      <td>International Union Against Tuberculosis and Lung Disease</td>
+      <td>国际防痨和肺部疾病联合会</td>
+      <td>Unknown</td>
+      <td>Research on China's Tobacco Tax</td>
+      <td>中国烟草税研究</td>
+      <td>Unknown</td>
+      <td>-</td>
+      <td>2018-07-20</td>
+      <td>2019-05-31</td>
+      <td>Tsinghua University</td>
+      <td>清华大学</td>
+      <td>School, College, University, or Training Institution</td>
+      <td>Not Applicable</td>
+      <td>Not Applicable</td>
+    </tr>
+    <tr>
+      <td>Pau Kwong Wun Charitable Foundation</td>
+      <td>鲍广桓儿童慈善基金</td>
+      <td>Hong Kong</td>
+      <td>Accepting Donations from Pau Kwong Wun Charitable Foundation</td>
+      <td>接受香港鲍广桓儿童慈善基金捐赠</td>
+      <td>Guangdong Province</td>
+      <td>广东省</td>
+      <td>2018-06-30</td>
+      <td>2018-12-31</td>
+      <td>Guangzhou City Golden Ribbon Mutual Assistance Center for Heads of Households with Special Children</td>
+      <td>广州市金丝带特殊儿童家长互助中心</td>
+      <td>Non-profit or Foundation</td>
+      <td>Unknown</td>
+      <td>Unknown</td>
+    </tr>
+    <tr>
+      <td>Israel Institute</td>
+      <td>以色列研究院</td>
+      <td>Unknown</td>
+      <td>Israel and Jewish Culture Research Program</td>
+      <td>以色列与犹太文化研究项目</td>
+      <td>Beijing City</td>
+      <td>北京市</td>
+      <td>2018-08-01</td>
+      <td>2019-07-31</td>
+      <td>Tsinghua University Education Foundation</td>
+      <td>清华大学教育基金会</td>
+      <td>Non-profit or Foundation</td>
+      <td>Ministry of Education</td>
+      <td>教育部</td>
+    </tr>
+    <tr>
+      <td>Saint Paul School</td>
+      <td>澳门圣保禄学校</td>
+      <td>Macau</td>
+      <td>Financial Subsidies for Daily Expenses and Teacher Salaries at Four Dominican Elementary Schools in Honghe Prefecture</td>
+      <td>资助红河州四所道明小学日常开支及教师工资项目</td>
+      <td>Yunnan Province</td>
+      <td>云南省</td>
+      <td>2018-07-10</td>
+      <td>2019-07-09</td>
+      <td>Yunnan Huashang Charitable Foundation</td>
+      <td>云南华商公益基金会</td>
+      <td>Non-profit or Foundation</td>
+      <td>Yunnan Federation of Returned Overseas Chinese</td>
+      <td>云南省归国华侨联合会</td>
     </tr>
   </tbody>
 </table>
