--- a/index_RO_table.html
+++ b/index_RO_table.html
@@ -496,6 +496,17 @@
       <td>Yunnan</td>
     </tr>
     <tr>
+      <td>Casa Ricci Social Services</td>
+      <td>利玛窦社会服务基金会</td>
+      <td>Sichuan Health and Family Planning Commission</td>
+      <td>四川省卫生和计划生育委员会</td>
+      <td>Macau</td>
+      <td>Health, Poverty Alleviation</td>
+      <td>Sichuan</td>
+      <td>2018-07-24</td>
+      <td>Sichuan</td>
+    </tr>
+    <tr>
       <td>Caterpillar Foundation</td>
       <td>卡特彼勒基金会</td>
       <td>Chinese People’s Association for Friendship with Foreign Countries</td>
@@ -870,7 +881,7 @@
       <td>Beijing, Chongqing, Fujian, Guangdong, Hainan, Hebei, Heilongjiang, Hubei, Hunan, Jiangsu, Jiangxi, Liaoning, Qinghai, Shaanxi, Shandong, Shanghai, Shanxi, Sichuan, Tianjin, Yunnan, Zhejiang</td>
     </tr>
     <tr>
-      <td>Concordia Welfare &amp; Education Foundation</td>
+      <td>Concordia Welfare and Education Foundation</td>
       <td>协同福利及教育基金</td>
       <td>Yunnan Department of Education</td>
       <td>云南省教育厅</td>
@@ -1121,6 +1132,17 @@
       <td>Shanghai</td>
       <td>2017-05-31</td>
       <td>China</td>
+    </tr>
+    <tr>
+      <td>Electronics and Telecommunications Research Institute</td>
+      <td>韩国电子通信研究院</td>
+      <td>Beijing Commission of Science and Technology</td>
+      <td>北京市科学技术委员会</td>
+      <td>South Korea</td>
+      <td>International Relations/Exchange, Technology</td>
+      <td>Beijing</td>
+      <td>2018-07-18</td>
+      <td>Beijing, Guangdong, Sichuan, Tianjin, Zhejiang</td>
     </tr>
     <tr>
       <td>Energy Foundation</td>
@@ -1915,6 +1937,17 @@
       <td>Hunan</td>
     </tr>
     <tr>
+      <td>Institute for Transportation and Development Policy</td>
+      <td>交通与发展政策研究所</td>
+      <td>Beijing Commission of Transport</td>
+      <td>北京市交通委员会</td>
+      <td>United States</td>
+      <td>Environment, Infrastructure, Urban Issues/Development</td>
+      <td>Beijing</td>
+      <td>2018-07-18</td>
+      <td>Beijing, Gansu, Guangdong, Guangxi, Guizhou, Heilongjiang, Hubei, Hunan, Inner Mongolia, Jiangsu, Jiangxi, Liaoning, Shaanxi, Shandong, Shanghai, Sichuan, Tianjin, Xinjiang, Yunnan, Zhejiang</td>
+    </tr>
+    <tr>
       <td>Interkultur</td>
       <td>香港国际文化融合基金会</td>
       <td>Jiangsu Department of Culture</td>
@@ -2199,6 +2232,17 @@
       <td>Guangdong</td>
       <td>2017-03-20</td>
       <td>Fujian, Guangdong, Guangxi, Hainan</td>
+    </tr>
+    <tr>
+      <td>Japan International Cooperation Center</td>
+      <td>日本国际协力中心</td>
+      <td>Chinese People’s Association for Friendship with Foreign Countries</td>
+      <td>中国人民对外友好协会</td>
+      <td>Japan</td>
+      <td>Civil Society Capacity-Building, Education, International Relations/Exchange, Technology, Trade</td>
+      <td>Beijing</td>
+      <td>2018-07-18</td>
+      <td>China</td>
     </tr>
     <tr>
       <td>Japan Iron and Steel Federation</td>
@@ -2496,6 +2540,17 @@
       <td>Sichuan</td>
       <td>2018-04-08</td>
       <td>Chongqing, Shaanxi, Sichuan, Yunnan</td>
+    </tr>
+    <tr>
+      <td>Korea Rural Economic Institute</td>
+      <td>韩国农村经济研究院</td>
+      <td>Beijing Bureau of Agriculture</td>
+      <td>北京市农业局</td>
+      <td>South Korea</td>
+      <td>Economic Development, International Relations/Exchange, Law and Governance, Rural Issues/Development</td>
+      <td>Beijing</td>
+      <td>2018-07-18</td>
+      <td>China</td>
     </tr>
     <tr>
       <td>Korea Textile Center</td>
@@ -3136,6 +3191,17 @@
       <td>China</td>
     </tr>
     <tr>
+      <td>Overseas China Education Foundation</td>
+      <td>海外中国教育基金会</td>
+      <td>Sichuan Department of Education</td>
+      <td>四川省教育厅</td>
+      <td>United States</td>
+      <td>Education, Infrastructure, Poverty Alleviation</td>
+      <td>Sichuan</td>
+      <td>2018-07-24</td>
+      <td>Sichuan</td>
+    </tr>
+    <tr>
       <td>Oxfam (Beijing)</td>
       <td>乐施会</td>
       <td>Chinese People’s Association for Friendship with Foreign Countries</td>
@@ -3609,6 +3675,17 @@
       <td>Jilin</td>
     </tr>
     <tr>
+      <td>South Korea Shipbuilders' Equipment Association</td>
+      <td>韩国造船设备协会</td>
+      <td>Shanghai Commission of Commerce</td>
+      <td>上海市商务委员会</td>
+      <td>South Korea</td>
+      <td>Trade</td>
+      <td>Shanghai</td>
+      <td>2018-07-27</td>
+      <td>Shanghai</td>
+    </tr>
+    <tr>
       <td>Sowers Action</td>
       <td>苗圃行动</td>
       <td>Yunnan Department of Education</td>
@@ -3684,6 +3761,17 @@
       <td>Liaoning</td>
       <td>2018-02-01</td>
       <td>Liaoning</td>
+    </tr>
+    <tr>
+      <td>Syngenta Foundation for Sustainable Agriculture</td>
+      <td>先正达农业可持续发展基金会</td>
+      <td>Beijing Bureau of Agriculture</td>
+      <td>北京市农业局</td>
+      <td>Switzerland</td>
+      <td>Agriculture, Economic Development, Environment</td>
+      <td>Beijing</td>
+      <td>2018-07-18</td>
+      <td>Beijing, Gansu, Guizhou, Shaanxi, Sichuan, Yunnan</td>
     </tr>
     <tr>
       <td>Tainan Cultural Association</td>
