--- a/TAandCPUpiece/AvgProvPerActivity.html
+++ b/TAandCPUpiece/AvgProvPerActivity.html
@@ -204,7 +204,7 @@ d3.csv("AvgProvPerActivity.csv", function(error, data) {
           .attr("class", "axislabel")
           .attr("transform", "rotate(-90)")
           .style("text-anchor", "middle")
-          .text("Average Number of Provinces Covered");
+          .text("Average Number of Provinces Per Temporary Activity");
 
 
 
