--- a/index_RO_table.html
+++ b/index_RO_table.html
@@ -639,6 +639,17 @@
       <td>Yunnan</td>
     </tr>
     <tr>
+      <td>China Cross-Strait Exchange Association</td>
+      <td>中华两岸交流协会</td>
+      <td>Jiangsu Department of Commerce</td>
+      <td>商务厅</td>
+      <td>Taiwan</td>
+      <td>Agriculture, Arts and Culture, Civil Society Capacity-Building, Education, International Relations/Exchange, Religion, Technology, Tourism, Trade</td>
+      <td>Jiangsu</td>
+      <td>2018-08-01</td>
+      <td>Anhui, Beijing, Chongqing, Fujian, Guangdong, Guizhou, Hainan, Jiangsu, Jiangxi, Jilin, Shaanxi, Shanghai, Sichuan, Tianjin, Yunnan, Zhejiang</td>
+    </tr>
+    <tr>
       <td>China Kind Fund</td>
       <td>中华爱心基金会</td>
       <td>State Ethnic Affairs Commission</td>
@@ -3684,6 +3695,17 @@
       <td>Shanghai</td>
       <td>2018-07-27</td>
       <td>Shanghai</td>
+    </tr>
+    <tr>
+      <td>South Korea Suowang Emergency Medical Treatment Aid Organization</td>
+      <td>韩国所望医疗援助机构</td>
+      <td>Hubei Health and Family Planning Commission</td>
+      <td>湖北省卫生和计划生育委员会</td>
+      <td>South Korea</td>
+      <td>Health</td>
+      <td>Hubei</td>
+      <td>2018-07-31</td>
+      <td>Hubei</td>
     </tr>
     <tr>
       <td>Sowers Action</td>
