--- a/TAandCPUpiece/TAbyCPUType-MultiPie.html
+++ b/TAandCPUpiece/TAbyCPUType-MultiPie.html
@@ -118,7 +118,7 @@ h2 {
         data.addColumn('string', 'CPUType');
         data.addColumn('number', 'Number');
         data.addRows([
-          ['Non-Profit or Foundation', 115],
+          ['Non-profit or Foundation', 115],
           ['Party or Government Entity', 10],
           ['School or Training Institution', 36],
           ['Hospital or Medical Center', 1],
@@ -154,7 +154,7 @@ h2 {
         data.addColumn('string', 'CPUType');
         data.addColumn('number', 'Number');
         data.addRows([
-          ['Non-Profit or Foundation', 57],
+          ['Non-profit or Foundation', 57],
           ['Party or Government Entity', 27],
           ['School or Training Institution', 21],
           ['Hospital or Medical Center', 12],
@@ -168,7 +168,7 @@ h2 {
 
         // Set options for Guangdong's pie chart.
         var options = {title:'Guangdong',
-                      titleTextStyle:{ color: '#231f1f', fontName: 'PortraitText', fontSize: '14' },
+                      titleTextStyle:{ color: '#231f1f', fontName: 'PortraitText', fontSize: '16' },
                        width:200,
                        height:240,
                        chartArea:{left:30,top:30,right:30,bottom:30},
@@ -191,7 +191,7 @@ h2 {
         data.addColumn('string', 'CPUType');
         data.addColumn('number', 'Number');
         data.addRows([
-          ['Non-Profit or Foundation', 11],
+          ['Non-profit or Foundation', 11],
           ['Party or Government Entity', 34],
           ['School or Training Institution', 12],
           ['Hospital or Medical Center', 0],
@@ -205,7 +205,7 @@ h2 {
 
         // Set options for Guizhou's pie chart.
         var options = {title:'Guizhou',
-                      titleTextStyle:{ color: '#231f1f', fontName: 'PortraitText', fontSize: '14' },
+                      titleTextStyle:{ color: '#231f1f', fontName: 'PortraitText', fontSize: '16' },
                        width:200,
                        height:240,
                        chartArea:{left:30,top:30,right:30,bottom:30},
@@ -226,7 +226,7 @@ h2 {
         data.addColumn('string', 'CPUType');
         data.addColumn('number', 'Number');
         data.addRows([
-          ['Non-Profit or Foundation', 44],
+          ['Non-profit or Foundation', 44],
           ['Party or Government Entity', 8],
           ['School or Training Institution', 6],
           ['Hospital or Medical Center', 1],
@@ -240,7 +240,7 @@ h2 {
 
         // Set options for Sichuan's pie chart.
         var options = {title:'Sichuan',
-                      titleTextStyle:{ color: '#231f1f', fontName: 'PortraitText', fontSize: '14' },
+                      titleTextStyle:{ color: '#231f1f', fontName: 'PortraitText', fontSize: '16' },
                        width:200,
                        height:240,
                        chartArea:{left:30,top:30,right:30,bottom:30},
@@ -261,7 +261,7 @@ h2 {
         data.addColumn('string', 'CPUType');
         data.addColumn('number', 'Number');
         data.addRows([
-          ['Non-Profit or Foundation', 22],
+          ['Non-profit or Foundation', 22],
           ['Party or Government Entity', 29],
           ['School or Training Institution', 4],
           ['Hospital or Medical Center', 5],
@@ -275,7 +275,7 @@ h2 {
 
         // Set options for Yunnan's pie chart.
         var options = {title:'Yunnan',
-                      titleTextStyle:{ color: '#231f1f', fontName: 'PortraitText', fontSize: '14' },
+                      titleTextStyle:{ color: '#231f1f', fontName: 'PortraitText', fontSize: '16' },
                        width:200,
                        height:240,
                        chartArea:{left:30,top:30,right:30,bottom:30},
