--- a/TAandCPUpiece/TAbyUniqueCPU-Pie.html
+++ b/TAandCPUpiece/TAbyUniqueCPU-Pie.html
@@ -106,7 +106,7 @@ h2 {
         data.addColumn('string', 'CPUType');
         data.addColumn('number', 'Number');
         data.addRows([
-          ['Non-Profit or Foundation', 200],
+          ['Non-profit or Foundation', 200],
           ['Party or Government Entity', 106],
           ['School or Training Institution', 104],
           ['Hospital or Medical Center', 27],
