--- a/TAandCPUpiece/TAbyUniqueCPUType-MultiPie.html
+++ b/TAandCPUpiece/TAbyUniqueCPUType-MultiPie.html
@@ -118,7 +118,7 @@ h2 {
         data.addColumn('string', 'CPUType');
         data.addColumn('number', 'Number');
         data.addRows([
-          ['Non-Profit or Foundation', 33],
+          ['Non-profit or Foundation', 33],
           ['Party or Government Entity', 9],
           ['School or Training Institution', 22],
           ['Hospital or Medical Center', 1],
@@ -154,7 +154,7 @@ h2 {
         data.addColumn('string', 'CPUType');
         data.addColumn('number', 'Number');
         data.addRows([
-          ['Non-Profit or Foundation', 37],
+          ['Non-profit or Foundation', 37],
           ['Party or Government Entity', 25],
           ['School or Training Institution', 17],
           ['Hospital or Medical Center', 7],
@@ -168,7 +168,7 @@ h2 {
 
         // Set options for Guangdong's pie chart.
         var options = {title:'Guangdong',
-                      titleTextStyle:{ color: '#231f1f', fontName: 'PortraitText', fontSize: '14' },
+                      titleTextStyle:{ color: '#231f1f', fontName: 'PortraitText', fontSize: '16' },
                        width:200,
                        height:240,
                        chartArea:{left:30,top:30,right:30,bottom:30},
@@ -191,7 +191,7 @@ h2 {
         data.addColumn('string', 'CPUType');
         data.addColumn('number', 'Number');
         data.addRows([
-          ['Non-Profit or Foundation', 8],
+          ['Non-profit or Foundation', 8],
           ['Party or Government Entity', 18],
           ['School or Training Institution', 8],
           ['Hospital or Medical Center', 0],
@@ -205,7 +205,7 @@ h2 {
 
         // Set options for Guizhou's pie chart.
         var options = {title:'Guizhou',
-                      titleTextStyle:{ color: '#231f1f', fontName: 'PortraitText', fontSize: '14' },
+                      titleTextStyle:{ color: '#231f1f', fontName: 'PortraitText', fontSize: '16' },
                        width:200,
                        height:240,
                        chartArea:{left:30,top:30,right:30,bottom:30},
@@ -226,7 +226,7 @@ h2 {
         data.addColumn('string', 'CPUType');
         data.addColumn('number', 'Number');
         data.addRows([
-          ['Non-Profit or Foundation', 12],
+          ['Non-profit or Foundation', 12],
           ['Party or Government Entity', 7],
           ['School or Training Institution', 5],
           ['Hospital or Medical Center', 1],
@@ -240,7 +240,7 @@ h2 {
 
         // Set options for Sichuan's pie chart.
         var options = {title:'Sichuan',
-                      titleTextStyle:{ color: '#231f1f', fontName: 'PortraitText', fontSize: '14' },
+                      titleTextStyle:{ color: '#231f1f', fontName: 'PortraitText', fontSize: '16' },
                        width:200,
                        height:240,
                        chartArea:{left:30,top:30,right:30,bottom:30},
@@ -261,7 +261,7 @@ h2 {
         data.addColumn('string', 'CPUType');
         data.addColumn('number', 'Number');
         data.addRows([
-          ['Non-Profit or Foundation', 12],
+          ['Non-profit or Foundation', 12],
           ['Party or Government Entity', 12],
           ['School or Training Institution', 4],
           ['Hospital or Medical Center', 4],
@@ -275,7 +275,7 @@ h2 {
 
         // Set options for Yunnan's pie chart.
         var options = {title:'Yunnan',
-                      titleTextStyle:{ color: '#231f1f', fontName: 'PortraitText', fontSize: '14' },
+                      titleTextStyle:{ color: '#231f1f', fontName: 'PortraitText', fontSize: '16' },
                        width:200,
                        height:240,
                        chartArea:{left:30,top:30,right:30,bottom:30},
@@ -292,7 +292,6 @@ h2 {
   </head>
   <body>
       <div id="wrapper">
-      <div id="header"><h1>Number of Unique CPUs, for Selected Provinces, March 2017-June 2018</h1></div>
     <div id="table1">
 
     <!--Table and divs that hold the pie charts-->
