--- a/TAandCPUpiece/TAbyCPUType-Pie.html
+++ b/TAandCPUpiece/TAbyCPUType-Pie.html
@@ -106,15 +106,15 @@ h2 {
         data.addColumn('string', 'CPUType');
         data.addColumn('number', 'Number');
         data.addRows([
-          ['Non-Profit or Foundation', 430],
+          ['Non-profit or Foundation', 430],
           ['Party or Government Entity', 146],
           ['School or Training Institution', 136],
           ['Hospital or Medical Center', 35],
           ['Unknown', 22],
           ['Think Tank or Research Institution', 19],
-          ['LLC', 5],
+          ['LLC', 2],
           ['Industry Association', 3],
-          ['Other', 2],
+          ['Other', 5],
           ['Foreign Chamber of Commerce', 2]
         ]);
 
@@ -136,7 +136,6 @@ h2 {
   </head>
   <body>
       <div id="wrapper">
-      <div id="header"><h1>Number of Temporary Activity Filings, by CPU Type, March 2017-June 2018</h1></div>
 
     <!--Table and divs that hold the pie charts-->
     <div id="China_chart_div" ></div>
