--- a/TAandCPUpiece/TAbyCPUType-Pie.html
+++ b/TAandCPUpiece/TAbyCPUType-Pie.html
@@ -121,7 +121,10 @@ h2 {
         // Set options for China's pie chart.
         var options = {width:500,
                        height:500,
-                       chartArea:{left:80,top:50,right:80,bottom:80},
+                       chartArea:{width:'70%'
+                         //left:30,top:65
+                        // ,right:80,bottom:80
+                       },
                        colors:['#062938','#0d6182','#128aba','#16a6df','#33b7eb','#58c4ee','#7dd1f2','#a2def6','#c7ebf9','#ecf8fd',],
                        legend: 'none'};
 
