--- a/TAandCPUpiece/TAbyUniqueCPU-Pie.html
+++ b/TAandCPUpiece/TAbyUniqueCPU-Pie.html
@@ -121,7 +121,10 @@ h2 {
         // Set options for China's pie chart.
         var options = {width:500,
                        height:500,
-                       chartArea:{left:80,top:50,right:80,bottom:80},
+                       chartArea:{width:'70%'
+                         //left:30,top:65
+                        // ,right:80,bottom:80
+                       },
                        colors:['#520010','#8f001d','#b80025','#e0002d','#ff0032','#ff335c','#ff5c7c','#ff859d','#ffadbe','#ffd6de',],
                        legend: 'none'};
 
