--- a/index_RO_table.html
+++ b/index_RO_table.html
@@ -179,7 +179,7 @@
     <tr>
       <td>All Japan Seamen’s Union</td>
       <td>全日本海员工会</td>
-      <td>Tianjin General Labor Union</td>
+      <td>Tianjin Federation of Trade Unions</td>
       <td>天津市总工会</td>
       <td>Japan</td>
       <td>Labor</td>
@@ -1774,7 +1774,7 @@
     <tr>
       <td>HKFTU Hong Ling Society for the Well-Being of the Elderly</td>
       <td>工联康龄长者服务社</td>
-      <td>Fujian General Labor Union</td>
+      <td>Fujian Federation of Trade Unions</td>
       <td>福建省总工会</td>
       <td>Hong Kong</td>
       <td>Aging, Health, International Relations/Exchange, Labor, Law and Governance</td>
@@ -2716,6 +2716,17 @@
       <td>Hunan</td>
       <td>2018-04-11</td>
       <td>Hunan</td>
+    </tr>
+    <tr>
+      <td>Macao Federation of Trade Unions</td>
+      <td>澳门工会联合总会</td>
+      <td>Guangdong Federation of Trade Unions</td>
+      <td>广东省总工会</td>
+      <td>Macau</td>
+      <td>International Relations/Exchange</td>
+      <td>Guangdong</td>
+      <td>2018-08-13</td>
+      <td>Guangdong</td>
     </tr>
     <tr>
       <td>Malaysian Palm Oil Council</td>
