--- a/index_RO_table.html
+++ b/index_RO_table.html
@@ -793,6 +793,17 @@
       <td>Henan</td>
     </tr>
     <tr>
+      <td>Chinese Agape Foundation</td>
+      <td>中国爱加倍基金会</td>
+      <td>Sichuan Department of Education</td>
+      <td>四川省教育厅</td>
+      <td>United States</td>
+      <td>Education, Health, Poverty Alleviation, Youth</td>
+      <td>Sichuan</td>
+      <td>2018-08-23</td>
+      <td>Sichuan</td>
+    </tr>
+    <tr>
       <td>Chinese Art of Tea Craft Union</td>
       <td>中华茶艺联合促进会</td>
       <td>Fujian Department of Agriculture</td>
@@ -4204,7 +4215,7 @@
     </tr>
     <tr>
       <td>Victorian Chamber of Commerce</td>
-      <td>澳大利亚维多利亚州工商会</td>
+      <td>维多利亚州工商会</td>
       <td>Shanghai Commission of Commerce</td>
       <td>上海市商务委员会</td>
       <td>Australia</td>
