--- a/index_RO_table.html
+++ b/index_RO_table.html
@@ -199,6 +199,17 @@
       <td>China</td>
     </tr>
     <tr>
+      <td>America Trade Development Council</td>
+      <td>美国贸易发展委员会</td>
+      <td>Tianjin Commission of Commerce</td>
+      <td>天津市商务委员会</td>
+      <td>United States</td>
+      <td>Economic Development, Trade</td>
+      <td>Tianjin</td>
+      <td>2018-08-30</td>
+      <td>Tianjin</td>
+    </tr>
+    <tr>
       <td>American International Chamber of Commerce (Beijing)</td>
       <td>美国国际商会</td>
       <td>Beijing Commission of Commerce</td>
@@ -273,6 +284,17 @@
       <td>Civil Society Capacity-Building, Disaster Relief, Gender Issues, International Relations/Exchange, Poverty Alleviation, Youth</td>
       <td>Beijing</td>
       <td>2017-06-30</td>
+      <td>China</td>
+    </tr>
+    <tr>
+      <td>Asia-Europe-Africa Trade and Investment Alliance Promotion Council</td>
+      <td>亚欧非贸易投资联合促进会</td>
+      <td>Tianjin Commission of Commerce</td>
+      <td>天津市商务委员会</td>
+      <td>Madagascar</td>
+      <td>Arts and Culture, Civil Society Capacity-Building, Economic Development, Trade</td>
+      <td>Tianjin</td>
+      <td>2018-08-30</td>
       <td>China</td>
     </tr>
     <tr>
@@ -2187,6 +2209,17 @@
       <td>Trade</td>
       <td>Shanghai</td>
       <td>2017-04-01</td>
+      <td>China</td>
+    </tr>
+    <tr>
+      <td>International Union Against Tuberculosis and Lung Disease</td>
+      <td>国际防痨和肺部疾病联合会</td>
+      <td>Shandong Health and Family Planning Commission</td>
+      <td>山东省卫生和计划生育委员会</td>
+      <td>United States</td>
+      <td>Health, Law and Governance</td>
+      <td>Shandong</td>
+      <td>2018-08-29</td>
       <td>China</td>
     </tr>
     <tr>
