--- a/index_RO_table.html
+++ b/index_RO_table.html
@@ -397,6 +397,17 @@
       <td>Beijing, Guangdong, Guangxi, Guizhou, Yunnan</td>
     </tr>
     <tr>
+      <td>Bring Me Hope</td>
+      <td>带给我希望基金会</td>
+      <td>Chongqing Bureau of Civil Affairs</td>
+      <td>重庆市民政局</td>
+      <td>United States</td>
+      <td>Arts and Culture, Disabilities, Education, Youth</td>
+      <td>Chongqing</td>
+      <td>2018-09-04</td>
+      <td>Chongqing</td>
+    </tr>
+    <tr>
       <td>Busan Economic Promotion Agency</td>
       <td>韩国釜山经济振兴院</td>
       <td>Shandong Department of Commerce</td>
@@ -406,6 +417,17 @@
       <td>Shandong</td>
       <td>2017-06-01</td>
       <td>Shandong</td>
+    </tr>
+    <tr>
+      <td>Butterfly Children's Hospices</td>
+      <td>蝴蝶慈善基金会有限公司</td>
+      <td>Hunan Department of Civil Affairs</td>
+      <td>湖南省民政厅</td>
+      <td>Hong Kong</td>
+      <td>Health, Youth</td>
+      <td>Hunan</td>
+      <td>2018-09-10</td>
+      <td>Hunan</td>
     </tr>
     <tr>
       <td>C40 Cities</td>
@@ -848,6 +870,17 @@
       <td>China</td>
     </tr>
     <tr>
+      <td>Chinese Cross-Straits Trade Association</td>
+      <td>台湾中华两岸贸易协会</td>
+      <td>Fujian Department of Commerce</td>
+      <td>福建省商务厅</td>
+      <td>Taiwan</td>
+      <td>Trade</td>
+      <td>Fujian</td>
+      <td>2018-09-10</td>
+      <td>China</td>
+    </tr>
+    <tr>
       <td>Chinese General Chamber of Commerce</td>
       <td>香港中华总商会</td>
       <td>Guangdong Department of Commerce</td>
@@ -1178,6 +1211,17 @@
       <td>China</td>
     </tr>
     <tr>
+      <td>Education and Science Society, Inc.</td>
+      <td>科技教育协会</td>
+      <td>Hunan Department of Education</td>
+      <td>湖南省教育厅</td>
+      <td>United States</td>
+      <td>Disabilities, Education, Rural Issues/Development, Youth</td>
+      <td>Hunan</td>
+      <td>2018-09-10</td>
+      <td>Hunan</td>
+    </tr>
+    <tr>
       <td>Electronics and Telecommunications Research Institute</td>
       <td>韩国电子通信研究院</td>
       <td>Beijing Commission of Science and Technology</td>
@@ -1440,6 +1484,17 @@
       <td>Beijing</td>
       <td>2018-05-23</td>
       <td>Beijing, Hebei</td>
+    </tr>
+    <tr>
+      <td>General Union of Neighbors' Association of Macau</td>
+      <td>澳门街坊会联合总会</td>
+      <td>Guangdong Department of Civil Affairs</td>
+      <td>广东省民政厅</td>
+      <td>Macau</td>
+      <td>International Relations/Exchange</td>
+      <td>Guangdong</td>
+      <td>2018-09-04</td>
+      <td>Guangdong</td>
     </tr>
     <tr>
       <td>George Institute for Global Health</td>
@@ -3686,6 +3741,17 @@
       <td>Beijing, Chongqing, Fujian, Guangdong, Guangxi, Guizhou, Jiangsu, Shandong, Shanghai, Sichuan, Yunnan, Zhejiang</td>
     </tr>
     <tr>
+      <td>Sino-American Friendship Association</td>
+      <td>美中友好协会</td>
+      <td>Chongqing Tourism Development Commission</td>
+      <td>重庆市旅游发展委员会</td>
+      <td>United States</td>
+      <td>Arts and Culture, Education, International Relations/Exchange, Sport, Tourism, Trade</td>
+      <td>Chongqing</td>
+      <td>2018-09-04</td>
+      <td>China</td>
+    </tr>
+    <tr>
       <td>Smile Train</td>
       <td>微笑列车基金会</td>
       <td>National Health and Family Planning Commission</td>
@@ -3972,6 +4038,17 @@
       <td>Hunan</td>
     </tr>
     <tr>
+      <td>The CEO Foundation</td>
+      <td>主流梦工场基金</td>
+      <td>Henan Department of Education</td>
+      <td>河南省教育厅</td>
+      <td>Hong Kong</td>
+      <td>Education, Health, Poverty Alleviation, Youth</td>
+      <td>Henan</td>
+      <td>2018-09-04</td>
+      <td>Henan</td>
+    </tr>
+    <tr>
       <td>The International Association Volunteers</td>
       <td>国际志愿者协会</td>
       <td>Hainan Department of Civil Affairs</td>
@@ -4204,7 +4281,7 @@
     </tr>
     <tr>
       <td>USA China Entrepreneurs Association (Beijing)</td>
-      <td>美国中国企业家协会</td>
+      <td>主要从事中美间经贸交流、投资合作以及企业咨询等国际商务业务在中国境内的联络、推广与促进工作。\n负责美国中国企业家协会业务范围内相关企业投资、贸易、企业咨询等国际商务业务在中国境内的联络、推广与促进工作。</td>
       <td>Beijing Commission of Commerce</td>
       <td>北京市商务委员会</td>
       <td>United States</td>
@@ -4223,6 +4300,17 @@
       <td>Inner Mongolia</td>
       <td>2018-07-11</td>
       <td>Inner Mongolia</td>
+    </tr>
+    <tr>
+      <td>USA China Entrepreneurs Association (Jilin)</td>
+      <td>美国中国企业家协会</td>
+      <td>Jilin Department of Commerce</td>
+      <td>吉林省商务厅</td>
+      <td>United States</td>
+      <td>Economic Development, Trade</td>
+      <td>Jilin</td>
+      <td>2018-09-04</td>
+      <td>Jilin</td>
     </tr>
     <tr>
       <td>USA Poultry and Egg Export Council</td>
