--- a/monthly/ROorigin.html
+++ b/monthly/ROorigin.html
@@ -158,8 +158,8 @@ padding:5px;
   </div>
 
 
-  <script src="./d3.v3.min.js"></script>
-  <script src="./d3.tip.v0.6.3.js"></script>
+  <script src="./scripts/d3.v3.min.js"></script>
+  <script src="./scripts/d3.tip.v0.6.3.js"></script>
 <script>
 //changed bottom margin to allow for rotated x-axis labels
 var margin = {top: 30, right: 20, bottom: 150, left: 80},
