--- a/monthly/ROregdate.html
+++ b/monthly/ROregdate.html
@@ -152,14 +152,14 @@ padding:5px;
 
 
   <div id="wrapper">
-  <div id="header"><h1>Number of Representative Offices Registered per Month, January 2017-July 2018</h1></div>
+  <div id="header"><h1>Number of Representative Offices Registered per Month, January 2017-August 2018</h1></div>
 <div id="histogramdiv"></div>
 
 
   </div>
 
-  <script src="./d3.v3.min.js"></script>
-  <script src="./d3.tip.v0.6.3.js"></script>
+  <script src="./scripts/d3.v3.min.js"></script>
+  <script src="./scripts/d3.tip.v0.6.3.js"></script>
 <script>
 
 //changed bottom margin to allow for rotated x-axis labels
