--- a/monthly/TAorigin.html
+++ b/monthly/TAorigin.html
@@ -152,14 +152,14 @@ padding:5px;
 
 
   <div id="wrapper">
-  <div id="header"><h1>Country/Region of Origin of Foreign NGOs Carrying out Temporary Activities, January 2017-July 2018</h1></div>
+  <div id="header"><h1>Country/Region of Origin of Foreign NGOs Carrying out Temporary Activities, January 2017-August 2018</h1></div>
 <label><input type="checkbox"> Sort values</label>
 <div id="histogramdiv"></div>
   </div>
 
 
-  <script src="./d3.v3.min.js"></script>
-  <script src="./d3.tip.v0.6.3.js"></script>
+  <script src="./scripts/d3.v3.min.js"></script>
+  <script src="./scripts/d3.tip.v0.6.3.js"></script>
 <script>
 //changed bottom margin to allow for rotated x-axis labels
 var margin = {top: 30, right: 20, bottom: 120, left: 80},
@@ -258,5 +258,5 @@ d3.select("input").on("change", change);
 });
 d3.select("body").append("div")
 .attr("class", "tooltip")
-.html("<em><ul><li>Only one country or region of origin for each organization is included, based on organizations’ public information.</li><li>Only activities that began on or before July 31, 2018 are shown here. The duration of any given temporary activity may extend beyond that date.</li></ul></em>");
+.html("<em><ul><li>Only one country or region of origin for each organization is included, based on organizations’ public information.</li><li>Only activities that began on or before August 31, 2018 are shown here. The duration of any given temporary activity may extend beyond that date.</li></ul></em>");
 </script>
