Update and rename index_RO_by_sector.html to monthly/ROsector.html
moved, renamed, updated for august

--- a/monthly/ROsector.html
+++ b/monthly/ROsector.html
@@ -152,14 +152,14 @@ padding:5px;
 
 
   <div id="wrapper">
-  <div id="header"><h1>Number of Representative Offices Engaged in Certain Fields of Work, January 2017-July 2018</h1></div>
+  <div id="header"><h1>Number of Representative Offices Engaged in Certain Fields of Work, January 2017-August 2018</h1></div>
 <label><input type="checkbox"> Sort values</label>
 <div id="histogramdiv"></div>
   </div>
 
 
-  <script src="./d3.v3.min.js"></script>
-  <script src="./d3.tip.v0.6.3.js"></script>
+  <script src="./scripts/d3.v3.min.js"></script>
+  <script src="./scripts/d3.tip.v0.6.3.js"></script>
 <script>
 //changed bottom margin to allow for rotated x-axis labels
 var margin = {top: 30, right: 20, bottom: 160, left: 80},
