--- a/monthly/TAlengthmonth.html
+++ b/monthly/TAlengthmonth.html
@@ -163,14 +163,14 @@ padding:5px;
 
 
   <div id="wrapper">
-  <div id="header"><h1>Lengths of Temporary Activities, in Months, January 2017-July 2018</h1></div>
+  <div id="header"><h1>Lengths of Temporary Activities, in Months, January 2017-August 2018</h1></div>
 <div id="histogramdiv"></div>
 
 
   </div>
 
-  <script src="./d3.v3.min.js"></script>
-  <script src="./d3.tip.v0.6.3.js"></script>
+  <script src="./scripts/d3.v3.min.js"></script>
+  <script src="./scripts/d3.tip.v0.6.3.js"></script>
 <script>
 
 //changed bottom margin to allow for rotated x-axis labels
@@ -265,6 +265,6 @@ function type(d) {
 d3.select("body").append("div")
 .attr("class", "tooltip")
 
-.html("<em><ul><li>Only activities that began on or before July 31, 2018 are shown here. The duration of any given temporary activity may extend beyond that date.</li></ul></em>");
+.html("<em><ul><li>Only activities that began on or before August 31, 2018 are shown here. The duration of any given temporary activity may extend beyond that date.</li></ul></em>");
 
 </script>
