--- a/XJcompanies.html
+++ b/XJcompanies.html
@@ -14,7 +14,7 @@
         }
         table.sortable {
       		font-size: 12px;
-      		font-family: 'PortraitText';
+      		font-family: 'Arial';
       	}
         table.sortable {border-spacing: 0}
        
